tests/invalid/syntax_missing_delimiter.c
int x = 10
while (x < 3 {
    x = x + 1;
}
